Support OpenAI O1 and O1-mini